add admin panel to add qunatity for items and to add new item