@@ -3,22 +3,19 @@ package restaurant.system.service;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import restaurant.system.controller.dto.AddDailySupplierDto;
-import restaurant.system.controller.dto.CreateItemDto;
-import restaurant.system.controller.dto.ItemEntityDto;
-import restaurant.system.controller.dto.SupplyEntityDto;
+import restaurant.system.controller.dto.*;
 import restaurant.system.db.enteties.SupplyEntity;
 import restaurant.system.db.enteties.ItemEntity;
-import restaurant.system.db.enums.ItemTypes;
 import restaurant.system.db.enums.ItemTypesSpecifications;
 import restaurant.system.db.repo.ItemRepository;
 import restaurant.system.db.repo.SupplyRepository;
 
 import java.sql.Date;
 import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.Calendar;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 public class ItemService {
@@ -74,14 +71,30 @@ public class ItemService {
         }
 
     }
+
     public ItemEntity findByItemName(String itemName) {
-       return itemRepository.findItemEntityByName(itemName).orElse(null);
+        return itemRepository.findItemEntityByName(itemName).orElse(null);
 
     }
 
     public List<ItemEntityDto> findAllByItemTypesSpecifications(ItemTypesSpecifications specifications) {
         List<ItemEntity> allBySpecialType = itemRepository.findAllBySpecialType(specifications);
         return allBySpecialType.stream().map(this::getItemEntityDto).collect(Collectors.toList());
+    }
+
+    public List<ItemClientEntityDto> forClientFindAllByItemTypesSpecifications(ItemTypesSpecifications specifications) {
+        List<ItemEntity> allBySpecialType = itemRepository.findAllBySpecialTypeAndTodaySupply(specifications);
+        System.out.println("Size is" + allBySpecialType.size());
+        return allBySpecialType.stream().map(this::getClientItemEntityDto).collect(Collectors.toList());
+    }
+
+    public List<ItemEntityDto> addALlDailySupplier(List<AddDailySupplierDto> addDailySupplierDtos) {
+        List<ItemEntityDto> all = new ArrayList<>();
+        for (AddDailySupplierDto addDailySupplierDto : addDailySupplierDtos) {
+            ItemEntityDto itemEntityDto = addDailySupplier(addDailySupplierDto);
+            all.add(itemEntityDto);
+        }
+        return all;
     }
 
     public ItemEntityDto addDailySupplier(AddDailySupplierDto addDailySupplierDto) {
@@ -106,6 +119,7 @@ public class ItemService {
         ItemEntityDto dto = new ItemEntityDto();
         dto.setItemTypes(itemEntity.getTypes());
         dto.setItemTypesSpecifications(itemEntity.getSpecialType());
+        dto.setId(Math.toIntExact(itemEntity.getId()));
         dto.setName(itemEntity.getName());
         dto.setDescription(itemEntity.getDescription());
         dto.setImageURL(itemEntity.getImageURL());
@@ -115,9 +129,25 @@ public class ItemService {
 
         List<SupplyEntityDto> supplyDtos = itemEntity.getSupplyEntities().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         dto.setSupplyEntities(supplyDtos);
+
+        return dto;
+    }
+
+    private ItemClientEntityDto getClientItemEntityDto(ItemEntity itemEntity) {
+        ItemClientEntityDto dto = new ItemClientEntityDto();
+        dto.setItemTypes(itemEntity.getTypes());
+        dto.setItemTypesSpecifications(itemEntity.getSpecialType());
+        dto.setName(itemEntity.getName());
+        dto.setDescription(itemEntity.getDescription());
+        dto.setImageURL(itemEntity.getImageURL());
+        dto.setPrice(itemEntity.getPrice());
+        dto.setPieces(itemEntity.getPieces());
+        dto.setGrams(itemEntity.getGrams());
+        SupplyEntityDto supplyEntityDto = convertToDto(itemEntity.getSupplyEntities().get(0));
+        dto.setDailySupplyEntities(supplyEntityDto);
 
         return dto;
     }
@@ -132,4 +162,42 @@ public class ItemService {
         return dto;
     }
 
+    public List<ItemEntityDto> findAllItems() {
+        return itemRepository.findAll().stream().
+                map(this::getItemEntityDto).toList();
+    }
+
+    public List<ItemQuantityDto> findAllItemsDailyQauntity() {
+        return itemRepository.findAll().stream().
+                map(this::convertToItemQuantity).toList();
+
+    }
+
+    private ItemQuantityDto convertToItemQuantity(ItemEntity itemEntity) {
+        ItemQuantityDto itemQuantityDto = new ItemQuantityDto(Math.toIntExact(itemEntity.getId()),
+                itemEntity.getName(),
+                itemEntity.getSpecialType(),
+                itemEntity.getTypes());
+        List<SupplyEntity> supplyEntities = itemEntity.getSupplyEntities();
+        int currentQuantity = 0;
+        for (SupplyEntity supplyEntity : supplyEntities) {
+            Date date = supplyEntity.getDate();
+            System.out.println("Date 185:" + date);
+            if (date.after(getYestarday())) {
+                currentQuantity += supplyEntity.getQuantity();
+            }
+        }
+        itemQuantityDto.setCurrentQuantity(currentQuantity);
+        return itemQuantityDto;
+    }
+
+    private Date getYestarday() {
+        Calendar calendar = Calendar.getInstance();  // Get the current date and time.
+
+        // Subtract one day to set the calendar to yesterday
+        calendar.add(Calendar.DAY_OF_MONTH, -1);
+        System.out.println("getYestarday" + new Date(calendar.getTimeInMillis()));
+        // Create a java.sql.Date from the time in milliseconds of the calendar instance
+        return new Date(calendar.getTimeInMillis());
+    }
 }
